--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -128,6 +128,7 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 
 /* Deals */
 .photos{padding-bottom: 10px;}
+.photos .slides_containter {height: 474px;}
 .photos .pagination{float: left; margin-top: 5px;}
 .photos .pagination li {float: left; margin: 0 5px 5px 0; }
 .photos .pagination li.current a img{border:1px solid #A32E27; }
