--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -130,10 +130,10 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 .photos{padding-bottom: 10px;}
 .photos .slides_container { height: 474px; }
 .photos .pagination{float: left; margin-top: 5px;}
-.photos .pagination li {float: left; margin: 0 5px 5px 0; }
-.photos .pagination li.current a img{border:1px solid #A32E27; }
-.photos .pagination li a img{border:1px solid #F0EEEA;}
-.photos .pagination li a img:hover{border:1px solid #A32E27;}
+.photos .pagination li,  #zoomed .pagination li{float: left; margin: 0 5px 5px 0; }
+.photos .pagination li.current a img, #zoomed .pagination li.current a img{border:1px solid #A32E27; }
+.photos .pagination li a img, #zoomed .pagination li a img{border:1px solid #F0EEEA;}
+.photos .pagination li a img:hover, #zoomed .pagination li a img:hover{border:1px solid #A32E27;}
 .photos .slides_container img{border:1px solid #F0EEEA;}
 .photos .next, .photos .prev, .photos .zoom {float: left; display: block;}
 .photos .next:hover, .photos .prev:hover, .photos .zoom:hover {background-position: bottom left;}
