--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -135,14 +135,18 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 .photos .pagination li a img, #zoomed .pagination li a img{border:1px solid #F0EEEA;}
 .photos .pagination li a img:hover, #zoomed .pagination li a img:hover{border:1px solid #A32E27;}
 .photos .slides_container img{border:1px solid #F0EEEA;}
-.photos .next, .photos .prev, .photos .zoom {float: left; display: block;}
+.photos .next, .photos .prev, .photos .zoom, #zoomed .next, #zoomed .prev, #zoomed .zoom {float: left; display: block;}
 .photos .next:hover, .photos .prev:hover, .photos .zoom:hover {background-position: bottom left;}
 .photos .next {text-indent: -9999px; background:url("../images/img_nav_next.jpg") no-repeat scroll left top transparent;height:27px;width:56px;}
 .photos .prev {text-indent: -9999px; background:url("../images/img_nav_prev.jpg") no-repeat scroll left top transparent;height:27px;width:56px;}
 .photos .zoom{text-indent: -9999px; background: url(../images/img_nav_zoom.jpg) top left no-repeat; height: 27px; width:262px;}
 
 #zoomed .slides_container {float: left; margin: 0 9px 0 0; width: 588px;}
-#zoomed .pagination{float:left;height:623px;width:143px;}
+#zoomed .pagination{float:left;height:623px;width:160px;}
+#zoomed .next, #zoomed .prev {position: absolute; z-index: 100; top: 345px; }
+#zoomed .next {left: 500px;}
+#zoomed .next {text-indent: -9999px; background:url("../images/nav_next.png") no-repeat scroll left top transparent;height:35px;width:56px;}
+#zoomed .prev {text-indent: -9999px; background:url("../images/nav_prev.png") no-repeat scroll left top transparent;height:35px;width:56px;}
 
 
 .timer{background: url(../images/bg_timer.jpg) top left repeat-x;border-top-left-radius:4px; -webkit-border-top-left-radius: 4px; -moz-borde-top-left-radius: 4px;border-top-right-radius:4px; -webkit-border-top-right-radius: 4px; -moz-borde-top-right-radius: 4px; height: 52px; color: #d9cac9; font-weight:normal; font-size: 13px;  width: 332px;}
